...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_outline">

        <TextView
            android:id="@+id/AddTasks"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="Add A New Task"
            android:textAlignment="center"
            android:textColor="#000000"
            android:drawableStart="@drawable/ic_baseline_post_add_24"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_task_24"
            tools:layout_editor_absoluteY="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskDescEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeTextType="uniform"
                android:autofillHints="name"
...
                android:hint="Tag (e.g CS1101S)"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_tag_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskTypeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="2sp"
                    android:autoSizeTextType="uniform"
                    android:autofillHints="name"
...
                android:gravity="center"
                android:text="Status : "
                android:textColor="@color/black"
                android:textStyle="bold" />
            <!--                android:progressTint="#880808"-->
            <SeekBar
                android:id="@+id/taskDescEditStatus"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="Status"
                android:background="@color/white"
                android:max="100"
                android:progress="0"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/dueDateButton"
                android:layout_width="210dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/backGroundColorContrast"
                android:text="Due Date"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="7sp" />

            <Button
                android:id="@+id/dueTimeButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/backGroundColorContrast"
                android:text="Due Time"
                android:textColor="@color/black"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/plannedDateButton"
                android:layout_width="210dp"
                android:layout_height="60dp"

                android:backgroundTint="@color/backGroundColorContrast"
                android:text="Planned Date"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="7sp" />

            <Button
                android:id="@+id/plannedTimeButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/backGroundColorContrast"
                android:text="Planned Time"
                android:textColor="@color/black"
...
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="7sp" />

        </LinearLayout>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="150dp"
            android:layout_height="51dp"
            android:text="Save Task"
            android:textColor="@color/white"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="15sp"
...
